--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
 </head>
 <body>
 	<h1 id="title">Benjamin Rogers Art</h1>
-	<ul id="port">
-        <h3>
-            <li class="nav-link" id="portfolio"><a href="benjaminrogersdrawpaint.html">portfolios</a></li>
-            <li class="nav-link" id="about"><a>about</a></li>
-            <li class="nav-link" id="cv"><a>c/v</a></li>
-            <li class="nav-link" id="contact"><a>contact</a></li>
-        </h3>
+    <ul id="port">
+        <li class="nav-link" id="portfolio"><h3><a href="benjaminrogersdrawpaint.html">portfolios</a></h3></li>
+        <li class="nav-link" id="about"><h3><a>about</a></h3></li>
+        <li class="nav-link" id="cv"><h3><a>c/v</a></h3></li>
+        <li class="nav-link" id="contact"><h3><a>contact</a></h3></li>
     </ul>
 	<div class="imggrid">
         
@@ -72,8 +70,16 @@
         
         -->
     <!--first gallery thumnail modal-->
-    <div id="modalBtn" class="button"></div>
-    <span class="buttonInfo" id="recentPaintings">recent paintings</span> 
+    <ul class="category-gallery">
+        <li>
+            <img src="https://benjaminrogersart.files.wordpress.com/2021/08/critique.jpg"/>
+            <h4>recent paintings</h4>
+        </li>
+        <li>
+            <img src="https://benjaminrogersart.files.wordpress.com/2021/08/distiction.jpg?w=350"/>
+            <h4>recent drawings</h4>
+        </li>
+    </ul>
     <div id="simpleModal" class="modal">
         <div class="arrow arrow-left"></div>
             <div class="modal-content">
@@ -95,7 +101,7 @@
             </div>
             <div class="arrow arrow-right"></div>
         </div>
-        <!--second gallery thumnail modal-->
+        <!--second gallery thumnail modal
         <div id="modalBtn2" class="button"></div>
         <span class="buttonInfo" id="recentDrawings">recent drawings</span>    
         <div id="simpleModal2" class="modal">
@@ -117,6 +123,7 @@
             </div>
             <div class="arrow arrow-right"></div>
         </div>
+        -->
     </div>
 </body>
 </html>
