upadated portfolio functions
the portfolios open and close. Added info to CV and About sections. Updated all markup

--- a/index.html
+++ b/index.html
@@ -38,24 +38,49 @@
         <img src="https://benjaminrogersart.files.wordpress.com/2020/07/img_9399.jpeg" id="about-photo">
         <div id="about-paragraph">
         <h2>about:</h2>
-        <p id="aboutP">Benjamin is an artist, living and working in Dayton OH. He was previously an Assistant Professor of Art at Red Rocks Community College in Lakewood CO. Currently he would like to encourage everyone that is interested in studying art to do so outside of higher education, and instead take advantage of the vast resources available to you in this technological age and save your money.<br>
+        <p id="aboutP">Benjamin is an artist, living and working in Dayton OH. He was previously an Assistant Professor of Art at Red Rocks Community College in Lakewood CO. Currently he would like to encourage everyone that is interested in studying art to do so outside of higher education, and instead take advantage of the vast resources available to you in this technological age and save your money.</p>
+        <p>Though he is trained in traditional modes and methods of painting and drawing, he is currently exploring digital forms of visual art, specifically what can be achieved through the discipline of computer programming. He also has a great deal of experience in digital illustration and general design.</p>
         <p>Benjamin's work follows in the tradition of figurative painting and drawing while accentuating the artifice of paint over adhering to naturalistic realism. His paintings are self-referential contemplations that comment on the intersections of life, art history, philosophy, culture, obsession, and the implications of what it means to be an artist while critiquing and indulging his pitifully naïve and self-centered ego.</p>
         </div>
     </div>
     <div id="cvSection">
         <h2>Artist Cirriculum Vitae</h2>
         <h3 class="cv-heading">EDUCATION</h3>
-            <p class="resume-item"><strong>MFA /</strong><em> ARIZONA STATE UNIVERSITY </em>2011<br>
-            <strong>BFA /</strong><em> NORTHERN KENTUCKY UNIVERSITY </em> 2007</p> 
+            <p class="resume-item"><strong>MFA </strong><em> ARIZONA STATE UNIVERSITY </em>2011<br>
+            <strong>BFA </strong><em> NORTHERN KENTUCKY UNIVERSITY </em> 2007</p> 
         <h3 class="cv-heading">SOLO EXHIBITIONS</h3>
             <p class="resume-item">2018 -<em> Where The Body Sits and Learns/</em> DAIRY ARTS CENTER Boulder CO<br>
             2014 -<em> Critique of Pure Reason/</em> SOO VISUAL ARTS CENTER Minneapolis MN<br>
             2014 -<em> On the Vanguard of Grand Delusion/</em> PURDUE UNIVERSITY West Lafayette IN<br>
             2011 -<em> Indecisive Moments/</em> ARIZONA STATE UNIVERSITY Tempe AZ</p>
         <h3 class="cv-heading">TWO & THREE PERSON EXHIBITIONS</h3>
+                <p class="resume-item">2018 -<em> Literally Figurative</em> 11<sup>th</sup> STREET GALLERY Denver CO<br>
+                2013 -<em> Face Time</em> NORMANDALE COMMUNITY COLLEGE  Bloomington MN<br>
+                2012 -<em> Into the World</em> CLARA M EAGLE GALLERY Murray KY</p>
         <h3 class="cv-heading">JURIED EXHIBITIONS</h3>
+                <p class="resume-item">2017 -<em> Young Painter's Competition</em> MIAMI UNIVERSITY GALLERY Oxford OH<br>
+                2016 -<em> Drawing Never Dies</em> REDLINE ART CENTER Denver CO<br>
+                2016 -<em> Williams Prize in Drawing</em> UNIVERSITY OF HARTFORD West Hartford CT<br>
+                2011 -<em> MFA Exhibition</em> FIRST STREET GALLERY New York NY<br>
+                2011 -<em> Master Pieces</em> MANIFEST GALLERY Newport KY<br>
+                2010 -<em> Juried Summer Exhibition</em> HARRY WOOD GALLERY Tempe AZ<br>
+                2010 -<em> Little Things</em> THE PROJECT LODGE Madison WI<br>
+                2009 -<em> Printstravaganza</em> GALLERY 100 Tempe AZ<br>
+                2008 -<em> NKU Alumni Exhibition</em> NORTHERN KENTUCKY UNIVERSITY Highland Heights KY<br>
+                2007 -<em> University Open</em> ARTS PLACE DOWNTOWN ART CENTER Lexington KY<br>
+                2007 -<em> Juried Student Exhibition</em> NORTHERN KENTUCKY UNIVERSITY Highland Heights KY<br>
+                2007 -<em> NSAL Annual Student Art Competition</em> LEXINGTON OPERA HOUSE Lexington KY<br>
+                2006 -<em> Juried Student Exhibition</em> NORTHERN KENTUCKY UNIVERSITY Highland Heights KY<br>
+                2005 -<em> Juried Student Exhibition</em> NORTHERN KENTUCKY UNIVERSITY Highland Heights KY<br>
+                2003 -<em> Juried Student Exhibition</em> NORTHERN KENTUCKY UNIVERSITY Highland Heights KY</p>
         <h3 class="cv-heading">GROUP EXHIBITIONS</h3>
+                <p class="resume-item">2020 -<em>Painting the Psalms</em> PARK CHURCH Denver CO<br>
+                2019 -<em> Suburban</em> LAWRENCE ARTS CENTER Lawrence KS<br>
+                2019 -<em>Painting the Psalms</em> PARK CHURCH Denver CO<br>
+                2019 -<em> Faculty Exhibition</em> RED ROCKS COMMUNITY COLLEGE Lakewood CO<br></p>
         <h3 class="cv-heading">BIBLIOGRAPHY</h3>
+                <p class="resume-item">2017 -<em> 60 AMERICANS</em> Exhibition Catalogue<br>
+                2015 -<em> ARTVOICES MAGAZINE</em> Featured Artist Issue #38 COVER</p>
         <h3 class="cv-heading">PROFESSIONAL ACTIVITIES</h3>
         <h3 class="cv-heading">AWARDS & DISTINCTIONS</h3>
         <h3 class="cv-heading">PUBLIC ART PROJECTS</h3>
@@ -70,31 +95,101 @@
     </div>
     <div id="currentPaintingLightBox" class="light-box">
         <div class="main-image">
-            <img src="https://benjaminrogersart.files.wordpress.com/2019/12/critique-2-copy.jpg" id="currentP-img">
-            <p id="current-image-info"><em>THE FINAL CRITIQUE</em><br>
+            <img src="https://benjaminrogersart.files.wordpress.com/2019/12/born-storm-dsatrtd-small-1.jpg" id="currentP-img">
+            <p class="current-image-info"><em>THE FINAL CRITIQUE</em><br>
                 watercolor and color pencil on paper<br>
-                42" x 50"</span><br>
+                42" x 50"<br>
                 2019</p>
         </div>
-        <div class="images">
+        <div class="p-images">
             <img src="https://benjaminrogersart.files.wordpress.com/2019/12/born-storm-dsatrtd-small-1.jpg">
+            <img src="https://benjaminrogersart.files.wordpress.com/2019/12/critique-2-copy.jpg">
             <img src="https://benjaminrogersart.files.wordpress.com/2019/11/gentle-art.jpg">
-            <img src="https://benjaminrogersart.files.wordpress.com/2013/12/3.jpg">        
+            <img src="https://benjaminrogersart.files.wordpress.com/2013/12/3.jpg">
+            <img src="https://benjaminrogersart.files.wordpress.com/2013/12/2.jpg">
+            <img src="https://benjaminrogersart.files.wordpress.com/2019/11/4.jpg">
+            <img src="https://benjaminrogersart.files.wordpress.com/2013/12/1.jpg">
+            <img src="https://benjaminrogersart.files.wordpress.com/2013/12/4.jpg">
+            <img src="https://benjaminrogersart.files.wordpress.com/2013/01/benjaminrogers110.jpg">
+            <img src="https://benjaminrogersart.files.wordpress.com/2013/01/rogers_benjamin_02.jpg">
+            <img src="https://benjaminrogersart.files.wordpress.com/2013/01/rogers_benjamin_07.jpg">
+            <img src="https://benjaminrogersart.files.wordpress.com/2013/01/rogers_benjamin_04.jpg">
+            <img src="https://benjaminrogersart.files.wordpress.com/2013/12/5.jpg">
+            <img src="https://benjaminrogersart.files.wordpress.com/2013/01/rogers_benjamin_06.jpg" value="p2">
+            <img src="https://benjaminrogersart.files.wordpress.com/2013/01/benjaminrogers8.jpg" value="p1">
+            <img src="https://benjaminrogersart.files.wordpress.com/2013/01/benjaminrogers7.jpg" value="p0">        
         </div>
     </div>
     <div id="currentDrawingLightBox" class="light-box">
         <div class="main-image">
-
+            <img src="https://benjaminrogersart.files.wordpress.com/2019/12/beast-ii.jpg" id="currrentD-img">
+        </div>
+        <div class="d-images">
+            <img src="https://benjaminrogersart.files.wordpress.com/2019/12/beast-ii.jpg" alt="Drawing by Benjamin Rogers titled Best Not to Wake a Wild Beast Waiting Dorman in Repose">
+            <img src="https://benjaminrogersart.files.wordpress.com/2019/12/son-in-space-copy.jpg" alt="Drawing by Benjamin Rogers titled Anxiously Poised at the Edge of the Realm of the Unknown">
+            <img src="https://benjaminrogersart.files.wordpress.com/2019/11/metaphor.jpg" alt="Drawing by Benjamin Rogers titled This Means Something"">
+            <img src="https://benjaminrogersart.files.wordpress.com/2021/02/img_4977-1.jpeg?w=648" alt="Drawing by Benjamin Rogers titled Father and Son at the Adequate Salt Lake">
+            <img src="https://benjaminrogersart.files.wordpress.com/2019/11/unspecified-3.jpg?w=652" alt="Drawing by Benjamin Rogers titled The Child Enthroned">
+            <img src="https://benjaminrogersart.files.wordpress.com/2019/11/18.jpg" alt="Drawing by Benjamin Rogers titled Self Portrait from Birthday Number Thirty">
+            <img src="https://benjaminrogersart.files.wordpress.com/2019/12/img_7305-1-copy.jpg" alt="Drawing by Benjamin Rogers titled On the Threshold of Distinction">
+            <img src="https://benjaminrogersart.files.wordpress.com/2013/12/13.jpg" alt="Drawing by Benjamin Rogers titled Life Deliberate">
+            <img src="https://benjaminrogersart.files.wordpress.com/2013/12/16.jpg" alt="Drawing by Benjamin Rogers titled study For Nature, Red in Tooth and Claw">
+            <img src="https://benjaminrogersart.files.wordpress.com/2013/12/20.jpg" alt="Drawing by Benjamin Rogers titled Addressing the Fourth Wall">
+            <img src="https://benjaminrogersart.files.wordpress.com/2019/11/unspecified-2.jpg" alt="Drawing by Benjamin Rogers titled Pay No Attention to the Man Behind the Curtain">
+            <img src="https://benjaminrogersart.files.wordpress.com/2019/11/19.jpg" alt="Drawing by Benjamin Rogers titled Mine Eyes are Homes of Silent Prayer">
+            <img src="https://benjaminrogersart.files.wordpress.com/2019/11/17-2.jpg" alt="Drawing by Benjamin Rogers titled How Far Then, Shall We Say, That the East is From the West">
+            <img src="https://benjaminrogersart.files.wordpress.com/2021/02/ghostii.jpg" alt="Drawing by Benjamin Rogers titled Some Manner of Ghost in the Machine">
+            <img src="https://benjaminrogersart.files.wordpress.com/2019/11/20_rogers.jpg" alt="Drawing by Benjamin Rogers titled  The Starry Heavens Above and the Moral Law Within">
+            <img src="https://benjaminrogersart.files.wordpress.com/2019/11/19-2.jpg" alt="Drawing by Benjamin Rogers titled One Among the Many">
         </div>
     </div>
     <div id="olderWorkLightBox" class="light-box">
         <div class="main-image">
-
+            <img src="https://benjaminrogersart.files.wordpress.com/2013/01/benjaminrogers18.jpg" alt="Painting by Benjamin Rogers titled Sic Transit Gloria" id="currentO-img">
+        </div>
+        <div class="o-images">
+            <img src="https://benjaminrogersart.files.wordpress.com/2013/01/benjaminrogers18.jpg" alt="Painting by Benjamin Rogers titled Sic Transit Gloria">
+            <img src="https://benjaminrogersart.files.wordpress.com/2013/01/benjaminrogers13.jpg" alt="Painting by Benjamin Rogers titled Before the Deluge">
+            <img src="https://benjaminrogersart.files.wordpress.com/2013/01/benjaminrogers12.jpg" alt="Painting by Benjamin Rogers titled Fortune Favors the Bold">
+            <img src="https://benjaminrogersart.files.wordpress.com/2013/01/benjaminrogers15.jpg" alt="Painting by Benjamin Rogers titled Rebuilding Rome">
+            <img src="https://benjaminrogersart.files.wordpress.com/2013/01/benjaminrogers14.jpg" alt="Painting by Benjamin Rogers titled The Paths of Glory Lead but to the Grave">
+            <img src="https://benjaminrogersart.files.wordpress.com/2021/02/mg_2428-edit-1.jpg?w=500" alt="Painting by Benjamin Rogers titled My Brother's Keeper">
+            <img src="https://benjaminrogersart.files.wordpress.com/2013/01/benjaminrogers16.jpg" alt="Painting by Benjamin Rogers titled If I Become Cheap, You'll Respect Me">
+            <img src="https://benjaminrogersart.files.wordpress.com/2021/02/1910539_512032201710_9195_n.jpg?w=500" alt="Painting by Benjamin Rogers titled Ritual">
+            <img src="https://benjaminrogersart.files.wordpress.com/2021/02/lindshibicopy.jpg?w=500" alt="Painting by Benjamin Rogers titled Reflection">
+            <img>
+            <img>
+            <img>
+            <img>
         </div>
     </div>
     <div id="studiesLightBox" class="light-box">
         <div class="main-image">
-
+            <img src="https://benjaminrogersart.files.wordpress.com/2021/02/12032243_10101032858804980_4116662715780548621_n.jpg" alt="Monotype by Benjamin Rogers titled" id="currentS-img">
+        </div>
+        <div class="s-images">
+            <img src="https://benjaminrogersart.files.wordpress.com/2021/02/12032243_10101032858804980_4116662715780548621_n.jpg">
+            <img src="https://benjaminrogersart.files.wordpress.com/2021/02/12006348_10101032858795000_6821392942208687728_n.jpg">
+            <img src="https://benjaminrogersart.files.wordpress.com/2021/02/12039606_10101032858814960_8241676717965608109_n.jpg">
+            <img src="https://benjaminrogersart.files.wordpress.com/2021/02/12038110_10101032858790010_8698030834248219644_n.jpg">
+            <img src="https://benjaminrogersart.files.wordpress.com/2013/01/rogers_benjamin_03.jpg">
+            <img src="https://benjaminrogersart.files.wordpress.com/2021/02/10.jpg">
+            <img src="https://benjaminrogersart.wordpress.com/benjaminrogers20/">
+            <img src="https://benjaminrogersart.files.wordpress.com/2013/01/benjaminrogers19.jpg">
+            <img src="https://benjaminrogersart.files.wordpress.com/2021/04/img_6315-1.jpeg">
+            <img src="https://benjaminrogersart.files.wordpress.com/2021/04/img_6317.jpeg">
+            <img src="https://benjaminrogersart.files.wordpress.com/2021/04/img_6316.jpeg">
+            <img src="https://benjaminrogersart.files.wordpress.com/2013/01/mg_7082-copy.jpg">
+            <img src="https://benjaminrogersart.files.wordpress.com/2021/04/img_6330.jpeg">
+            <img src="https://benjaminrogersart.files.wordpress.com/2021/04/img_6324.jpeg">
+            <img src="https://benjaminrogersart.files.wordpress.com/2021/04/img_6323.jpeg">
+            <img src="https://benjaminrogersart.files.wordpress.com/2021/04/img_6321.jpeg">
+            <img src="https://benjaminrogersart.files.wordpress.com/2021/04/img_6319.jpeg">
+            <img src="https://benjaminrogersart.files.wordpress.com/2021/04/img_6326.jpeg">
+            <img src="https://benjaminrogersart.files.wordpress.com/2021/04/img_6331.jpeg">
+            <img src="https://benjaminrogersart.files.wordpress.com/2021/04/img_6332.jpeg">
+            <img src="https://benjaminrogersart.files.wordpress.com/2021/04/img_5272.jpeg">
+            <img src="https://benjaminrogersart.files.wordpress.com/2021/04/img_5276.jpeg">
         </div>
     </div>
     
