updated markup includes image-information
the titles of paintings are included

--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
         <ul id="portfolioList">
             <li><button id="paintingsLink" class="portfolioLinks">
                 <img src='https://benjaminrogersart.files.wordpress.com/2021/08/critique.jpg' id="recentPaintingsLink" class= "button-image">
-                    <span class="buttonInfo">recent painting</span></button></li>
+                    <span class="buttonInfo" id="paintingsSpan">recent painting</span></button></li>
             <li><button id="drawingsLink" class="portfolioLinks">
                 <img src='https://benjaminrogersart.files.wordpress.com/2021/08/distiction.jpg?w=350' id="recentDrawingsLink" class="button-image">
-                    <span class="buttonInfo">recent drawing</span></button></li>
+                    <span class="buttonInfo" id="drawingsSpan">recent drawing</span></button></li>
             <li><button id="oldWorkLink" class="portfolioLinks">
                 <img src='https://benjaminrogersart.files.wordpress.com/2021/08/benjaminrogers18.jpg' id="olderWorkLink" class="button-image">
-                    <span class="buttonInfo">older work</span></button></li>
+                    <span class="buttonInfo" id="olderSpan">older work</span></button></li>
             <li><button id="studiesLink" class="portfolioLinks">
-                <img src="https://benjaminrogersart.files.wordpress.com/2021/08/study.jpeg" id="studiesLink" class="button-image">
-                <span class="buttonInfo">studies</span></button></li>
+                <img src="https://benjaminrogersart.files.wordpress.com/2021/08/study.jpeg" id="studiesWorkLink" class="button-image">
+                <span class="buttonInfo" id="studiesSpan">studies</span></button></li>
         </ul>
     </div>
     <div id="aboutSection">
@@ -93,42 +93,71 @@
         <p>contact me at <strong>benjaminrogersart@gmail.com</strong><br>
         social media links:</p>
     </div>
+    <div class="image-section">
     <div id="currentPaintingLightBox" class="light-box">
         <div class="main-image">
             <img src="https://benjaminrogersart.files.wordpress.com/2019/12/born-storm-dsatrtd-small-1.jpg" id="currentP-img">
-            <p class="current-image-info"><em>THE FINAL CRITIQUE</em><br>
-                watercolor and color pencil on paper<br>
-                42" x 50"<br>
-                2019</p>
+                <div id="paintingImageInfo">
+                    <p><em>THOSE BORN TO THE STORM GROW WEARY OF THE COLD</em><br>
+                    oil on canvas<br>
+                    60" x 72"<br>
+                    2019</p>
+                </div>
         </div>
         <div class="p-images">
             <img src="https://benjaminrogersart.files.wordpress.com/2019/12/born-storm-dsatrtd-small-1.jpg">
+                <p class="image-info"><em>THOSE BORN TO THE STORM GROW WEARY OF THE COLD</em><br>oil on canvas<br>60" x 72"<br>2019</p>
             <img src="https://benjaminrogersart.files.wordpress.com/2019/12/critique-2-copy.jpg">
-            <img src="https://benjaminrogersart.files.wordpress.com/2019/11/gentle-art.jpg">
+                <p class="image-info"><em>THE FINAL CRITIQUE</em><br>watercolor and color pencil on paper<br>42" x 50"<br>2019</p>
+            <img src="https://benjaminrogersart.files.wordpress.com/2021/10/gentle-art-copy.jpg">
+                <p class="image-info"><em>THE GENTLE ART OF LEARNING</em><br>watercolor on paper<br>22" x 27"<br>2018</p>
             <img src="https://benjaminrogersart.files.wordpress.com/2013/12/3.jpg">
+                <p class="image-info"><em>WHAT DID I KNOW OF LOVE'S AUSTERE AND LONELY OFFICES</em><br>watercolor on paper<br>22" x 27"<br>2016</p>
             <img src="https://benjaminrogersart.files.wordpress.com/2013/12/2.jpg">
+                <p class="image-info"><em>THE LESSER GRIEFS OF WILD UNREST</em><br>watercolor on paper<br>22" x 27"<br>2016</p>
             <img src="https://benjaminrogersart.files.wordpress.com/2019/11/4.jpg">
+                <p class="image-info"><em>NATURE, RED IN TOOTH AND CLAW</em><br>watercolor on paper<br>20" x 24"<br>2016</p>
             <img src="https://benjaminrogersart.files.wordpress.com/2013/12/1.jpg">
+                <p class="image-info"><em>RAPT, FROM THE FICKLE TO THE FRAIL</em><br>oil on canvas<br>35" x 42"<br>2017</p>
             <img src="https://benjaminrogersart.files.wordpress.com/2013/12/4.jpg">
+                <p class="image-info"><em>THE MORNING DOESN'T KNOW WHAT THE AFTERNOON HOLDS DEAR</em><br>oil on canvas<br>35" x 42"<br>2014</p>
             <img src="https://benjaminrogersart.files.wordpress.com/2013/01/benjaminrogers110.jpg">
+                <p class="image-info"><em>INSIDE THE ARTIST'S STUDIO: PAINTING IN THE ABBREVIATED FIELD</em><br>oil on canvas<br>45" x 56"<br>2012</p>
             <img src="https://benjaminrogersart.files.wordpress.com/2013/01/rogers_benjamin_02.jpg">
+                <p class="image-info"><em>THE PERFECT ROMANCE OF HIGH MORALITY</em><br>oil on canvas<br>36" x 38"<br>2014</p>
             <img src="https://benjaminrogersart.files.wordpress.com/2013/01/rogers_benjamin_07.jpg">
+                <p class="image-info"><em>THE CRITIQUE OF PURE REASON</em><br>oil on canvas<br>35" x 42"<br>2012</p>
             <img src="https://benjaminrogersart.files.wordpress.com/2013/01/rogers_benjamin_04.jpg">
+                <p class="image-info"><em>THAT WHICH WE'VE BUILT TOGETHER THROUGHOUT THESE MANY YEARS</em><br>oil on canvas<br>35" x 42"<br>2012</p>
             <img src="https://benjaminrogersart.files.wordpress.com/2013/12/5.jpg">
+                <p class="image-info"><em>THE PERFECT ROMANCE OF SELF-RELIANCE</em><br>oil on canvas<br>35" x 42"<br>2014</p>
             <img src="https://benjaminrogersart.files.wordpress.com/2013/01/rogers_benjamin_06.jpg" value="p2">
+                <p class="image-info"><em>ON THE VANGUARD OF GRAND DELUSION</em><br>oil on canvas<br>35" x 42"<br>2012</p>
             <img src="https://benjaminrogersart.files.wordpress.com/2013/01/benjaminrogers8.jpg" value="p1">
-            <img src="https://benjaminrogersart.files.wordpress.com/2013/01/benjaminrogers7.jpg" value="p0">        
+                <p class="image-info"><em>THE PAST HAS ITS PLACE</em><br>oil on canvas<br>35" x 42"<br>2011</p>
+            <img src="https://benjaminrogersart.files.wordpress.com/2013/01/benjaminrogers7.jpg" value="p0"> 
+                <p class="image-info"><em>THE HUNGER ARTIST</em><br>oil on canvas<br>35" x 42"<br>2010</p>       
         </div>
     </div>
     <div id="currentDrawingLightBox" class="light-box">
         <div class="main-image">
             <img src="https://benjaminrogersart.files.wordpress.com/2019/12/beast-ii.jpg" id="currrentD-img">
+            <div id="drawingImageInfo">
+                <p><em>BEST NOT TO WAKE A WILD BEAST WAITING DORMANT IN REPOSE</em><br>
+                color pencil and graphite on paper<br>
+                22" x 27"<br>
+                2018</p>
+            </div>
         </div>
         <div class="d-images">
             <img src="https://benjaminrogersart.files.wordpress.com/2019/12/beast-ii.jpg" alt="Drawing by Benjamin Rogers titled Best Not to Wake a Wild Beast Waiting Dorman in Repose">
+                <p><em>BEST NOT TO WAKE A WILD BEAST WAITING DORMANT IN REPOSE</em><br>color pencil and graphite on paper<br>22" x 27"<br>2018</p>
             <img src="https://benjaminrogersart.files.wordpress.com/2019/12/son-in-space-copy.jpg" alt="Drawing by Benjamin Rogers titled Anxiously Poised at the Edge of the Realm of the Unknown">
+                <p><em>BEST NOT TO WAKE A WILD BEAST WAITING DORMANT IN REPOSE</em><br>color pencil and graphite on paper<br>22" x 27"<br>2018</p>
             <img src="https://benjaminrogersart.files.wordpress.com/2019/11/metaphor.jpg" alt="Drawing by Benjamin Rogers titled This Means Something"">
+                <p><em>BEST NOT TO WAKE A WILD BEAST WAITING DORMANT IN REPOSE</em><br>color pencil and graphite on paper<br>22" x 27"<br>2018</p>
             <img src="https://benjaminrogersart.files.wordpress.com/2021/02/img_4977-1.jpeg?w=648" alt="Drawing by Benjamin Rogers titled Father and Son at the Adequate Salt Lake">
+                <p><em>BEST NOT TO WAKE A WILD BEAST WAITING DORMANT IN REPOSE</em><br>color pencil and graphite on paper<br>22" x 27"<br>2018</p>
             <img src="https://benjaminrogersart.files.wordpress.com/2019/11/unspecified-3.jpg?w=652" alt="Drawing by Benjamin Rogers titled The Child Enthroned">
             <img src="https://benjaminrogersart.files.wordpress.com/2019/11/18.jpg" alt="Drawing by Benjamin Rogers titled Self Portrait from Birthday Number Thirty">
             <img src="https://benjaminrogersart.files.wordpress.com/2019/12/img_7305-1-copy.jpg" alt="Drawing by Benjamin Rogers titled On the Threshold of Distinction">
@@ -174,7 +203,7 @@
             <img src="https://benjaminrogersart.files.wordpress.com/2021/02/12038110_10101032858790010_8698030834248219644_n.jpg">
             <img src="https://benjaminrogersart.files.wordpress.com/2013/01/rogers_benjamin_03.jpg">
             <img src="https://benjaminrogersart.files.wordpress.com/2021/02/10.jpg">
-            <img src="https://benjaminrogersart.wordpress.com/benjaminrogers20/">
+            <img src="https://benjaminrogersart.files.wordpress.com/2013/01/benjaminrogers20.jpg">
             <img src="https://benjaminrogersart.files.wordpress.com/2013/01/benjaminrogers19.jpg">
             <img src="https://benjaminrogersart.files.wordpress.com/2021/04/img_6315-1.jpeg">
             <img src="https://benjaminrogersart.files.wordpress.com/2021/04/img_6317.jpeg">
@@ -192,6 +221,6 @@
             <img src="https://benjaminrogersart.files.wordpress.com/2021/04/img_5276.jpeg">
         </div>
     </div>
-    
+</div>
 </body>
 </html>
